Update my heroku Ghost 4

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-CONTENT_API_KEY=5b920e0acdf1d69b540a80b7e9
-BLOG_URL=https://ghostcms-nextjs-backend.herokuapp.com
+CONTENT_API_KEY=c888070507ca822cd98a071cc3
+BLOG_URL=https://ghost4-cms.herokuapp.com
